<resources>
    <string name="app_name">The Movie Booking App</string>
    <string name="lbl_welcome">Welcome!</string>
    <string name="lbl_welcome_content">Hello! Welcome to Galaxy App.</string>
    <string name="lbl_get_started">Get Started</string>
    <string name="lbl_welcome_back_label">Welcome back, login to continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_forget_password">Forget Password?</string>
    <string name="lbl_sign_in_with_facebook">Sign in with facebook</string>
    <string name="lbl_sign_in_with_google">Sign in with google</string>
    <string name="lbl_confirm">Confirm</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_phone">Phone</string>
    <string name="lbl_sign_up_with_facebook">Sign up with facebook</string>
    <string name="lbl_sign_up_with_google">Sign up with google</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_now_showing">Now Showing</string>
    <string name="lbl_coming_soon">Coming Soon</string>
    <string name="lbl_plot_summary">Plot Summary</string>
    <string name="lbl_cast">Cast</string>
    <string name="lbl_get_your_ticket">Get your ticket</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_enter_promo_code">Enter Promo Code</string>
    <string name="lbl_don_t_have_any_promo_code">Don\'t have any promo code?</string>
    <string name="lbl_get_it_now">Get it now</string>
    <string name="lbl_sub_total_s">Sub Total: %s$</string>
    <string name="lbl_payment_method">Payment method</string>
    <string name="lbl_pay_d">Pay %d$</string>
    <string name="lbl_payment_amount">Payment amount</string>
    <string name="lbl_add_new_card">Add new card</string>
    <string name="lbl_card_number">Card number</string>
    <string name="lbl_card_holder">Card holder</string>
    <string name="lbl_expiration_date">Expiration date</string>
    <string name="lbl_cvc">CVC</string>
    <string name="lbl_booking_no">Booking no</string>
    <string name="lbl_show_time_date">Show Time - Date</string>
    <string name="lbl_theater">Theater</string>
    <string name="lbl_row">Row</string>
    <string name="lbl_screen">Screen</string>
    <string name="lbl_seat">Seats</string>
    <string name="lbl_price">Price</string>
    <string name="lbl_awesome">Awesome!</string>
    <string name="lbl_this_is_your_ticket">This is your ticket</string>
    <string name="lbl_expires">Expires</string>
    <string name="placeholder_password">********</string>
    <string name="placeholder_abc_gmail_com">abc@gmail.com</string>
    <string name="placeholder_09">09*********</string>
    <string name="placeholder_mg_mg">Mg Mg</string>
    <string name="placeholder_date">**/**</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_close">Close</string>
    <string name="lbl_open">Close</string>
    <string name="lbl_promo_code">Promotion Code</string>
    <string name="lbl_translate">Select a language</string>
    <string name="lbl_terms_of_service">Term of services</string>
    <string name="lbl_help">Help</string>
    <string name="lbl_rate_us">Rate us</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_available">Available</string>
    <string name="lbl_reversed">Reversed</string>
    <string name="lbl_your_selection">Your Selection</string>
    <string name="lbl_ticket">Tickets</string>
    <string name="lbl_required">Required</string>
    <string name="lbl_profile_name">Hi %s</string>
    <string name="lbl_buy_ticket_for_s">Buy Ticket for $%s</string>
    <string name="lbl_payment_card">*** *** *** %s</string>
</resources>