<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/clPM"
    tools:context=".activities.PaymentMethodActivity">

    <include
        android:id="@+id/vpPmActionBar"
        layout="@layout/view_pod_simple_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPmAmountLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:text="@string/lbl_payment_amount"
                android:textSize="@dimen/text_regular_3x"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPmAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="$ 926.21"
                android:textColor="?attr/colorOnSurface"
                android:textSize="@dimen/text_heading_2x"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tvPmAmountLabel"
                app:layout_constraintTop_toBottomOf="@id/tvPmAmountLabel" />

            <alirezat775.lib.carouselview.CarouselView
                android:id="@+id/cvPmCards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:listitem="@layout/view_holder_payment_card"
                app:layout_constraintTop_toBottomOf="@id/tvPmAmount" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPmAddNewCard"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                app:icon="@drawable/ic_baseline_add_circle_24"
                android:layout_height="wrap_content"
                app:iconTint="@color/colorGreenLight"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginStart="@dimen/margin_medium_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvPmCards"
                android:textColor="@color/colorGreenLight"
                android:text="@string/lbl_add_new_card" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPmConfirm"
        style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/general_btn_size"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/margin_medium_2"
        android:background="@drawable/background_btn_confirm"
        android:text="@string/lbl_confirm"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:elevation="@dimen/margin_medium" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>